--- a/计算机.md
+++ b/计算机.md
@@ -2,7 +2,10 @@
 ## 数据库连接
 - mysql
 ``` python
-import pymysql
-connect = pymysql.connect(host='172.21.51.14', user='root', passwd='123', database='rondschat_corpus')
-cursor = connect.cursor(cursor=pymysql.cursors.DictCursor) # 加了参数，每行数据以字典形式返回
+  import pymysql
+  connect = pymysql.connect(host='172.21.51.14', user='root', passwd='123', database='rondschat_corpus')
+  cursor = connect.cursor(cursor=pymysql.cursors.DictCursor) # 加了参数，每行数据以字典形式返回
+  sql = 'select alarm_id, industry, points, diagnosis, suggestion, alg_signaloverview from phmgpt_signal_standard where alg_signaloverview is not null'
+  cursor.execute(sql)
+  lines = cursor.fetchall()
 ```
