--- a/计算机.md
+++ b/计算机.md
@@ -3,9 +3,21 @@
 - mysql
 ``` python
   import pymysql
-  connect = pymysql.connect(host='172.21.51.14', user='root', passwd='123', database='rondschat_corpus')
+  connect = pymysql.connect(host='host_ip', user='root', passwd='123', database='datasename')
   cursor = connect.cursor(cursor=pymysql.cursors.DictCursor) # 加了参数，每行数据以字典形式返回
-  sql = 'select alarm_id, industry, points, diagnosis, suggestion, alg_signaloverview from phmgpt_signal_standard where alg_signaloverview is not null'
+  sql = 'select a,b,c from tablenam'
   cursor.execute(sql)
   lines = cursor.fetchall()
+```
+
+## 计算机网络
+``` python
+import requests
+
+data = {
+  "question": '测试数据'
+}
+response = requests.post("host_ip", headers={"Content-Type": "application/json"}, json=data)
+ans = json.loads(response.content)
+ans = ans['data']
 ```
