--- a/计算机.md
+++ b/计算机.md
@@ -46,6 +46,7 @@ print(matplotlib.get_cachedir())
 
 6. 显示中文的代码：
 ``` python
+import matplotlib.pyplot as plt
 plt.rcParams['font.sans-serif'] = ['SimHei']
 plt.rcParams['axes.unicode_minus'] = False
 ```
