增加DPO中参考模型和策略模型的解释

--- a/大模型论文研读.md
+++ b/大模型论文研读.md
@@ -5,6 +5,9 @@
 - 通过赔率比（odds ratio）为优劣的答案增加奖励或者惩罚；
 
 ### DPO
+- policy model: 策略模型，需要微调的模型，也是训练完DPO后得到的模型；
+- reference model: 参考模型，不需要微调的模型，也就是原始模型，用于和策略模型对比在同一答案下的生成概率；
+  
 - beta 指隐式奖励的超参数，beta是DPO损失的温度参数，通常取值范围在0.1到0.5之间。当beta趋近于0时，我们可以忽略参考模型。
 
 - 指标
