--- a/大模型论文研读.md
+++ b/大模型论文研读.md
@@ -4,7 +4,7 @@
 - 相比于RLHF 不需要 偏好模型；
 - 通过赔率比（odds ratio）为优劣的答案增加奖励或者惩罚；
 
-### DPO
+### DPO [Direct Preference Optimization: Your Language Model is Secretly a Reward Model](https://arxiv.org/abs/2305.18290)
 - policy model: 策略模型，需要微调的模型，也是训练完DPO后得到的模型；
 - reference model: 参考模型，不需要微调的模型，也就是原始模型，用于和策略模型对比在同一答案下的生成概率；
   
